--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ oauthlib==3.2.2
 paypal==1.2.5
 phonenumberslite==8.13.16
 Pillow==9.5.0
+psycopg2==2.9.7
 psycopg2-binary==2.9.7
 pycparser==2.21
 PyJWT==2.7.0
@@ -41,4 +42,4 @@ social-auth-core==4.4.2
 sqlparse==0.4.4
 typing_extensions==4.6.3
 tzdata==2023.3
-urllib3==2.0.2
+urllib3==1.26.6
