--- a/.env
+++ b/.env
@@ -7,3 +7,15 @@ EMAIL_PORT = 587
 EMAIL_HOST_USER = 'kimberleewhite2020@gmail.com'
 EMAIL_HOST_PASSWORD = 'jlwpgcarndpautul'
 EMAIL_USE_TLS = True
+
+
+
+#database
+ENGINE="django.db.backends.postgresql_psycopg2"
+NAME="verceldb"
+USER="default"
+PASSWORD="TqY7Sw8mJIMR"
+HOST="ep-odd-lab-79773778-pooler.us-east-1.postgres.vercel-storage.com"
+PORT=5432
+DATABASE_URL="postgres://default:TqY7Sw8mJIMR@ep-odd-lab-79773778.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+DATABASE_URL="postgres://default:TqY7Sw8mJIMR@ep-odd-lab-79773778.us-east-1.postgres.vercel-storage.com:5432/verceldb"
