--- a/.env
+++ b/.env
@@ -11,11 +11,11 @@ EMAIL_USE_TLS = True
 
 
 #database
-ENGINE="django.db.backends.postgresql_psycopg2"
-NAME="verceldb"
-USER="default"
-PASSWORD="TqY7Sw8mJIMR"
-HOST="ep-odd-lab-79773778-pooler.us-east-1.postgres.vercel-storage.com"
-PORT=5432
-DATABASE_URL="postgres://default:TqY7Sw8mJIMR@ep-odd-lab-79773778.us-east-1.postgres.vercel-storage.com:5432/verceldb"
-DATABASE_URL="postgres://default:TqY7Sw8mJIMR@ep-odd-lab-79773778.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+# ENGINE="django.db.backends.postgresql_psycopg2"
+# NAME="verceldb"
+# USER="default"
+# PASSWORD="TqY7Sw8mJIMR"
+# HOST="ep-odd-lab-79773778-pooler.us-east-1.postgres.vercel-storage.com"
+# PORT=5432
+# DATABASE_URL="postgres://default:TqY7Sw8mJIMR@ep-odd-lab-79773778.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+# DATABASE_URL="postgres://default:TqY7Sw8mJIMR@ep-odd-lab-79773778.us-east-1.postgres.vercel-storage.com:5432/verceldb"
